# blip

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  build_web.sh  package-lock.json  package.json  playwright.config.ts
.github/workflows/: pages.yml
crates/blip/: Cargo.toml
crates/blip/src/: audio.rs  color.rs  ctx.rs  draw.rs  font.rs  input.rs  lib.rs  math.rs  pool.rs  session.rs  texture.rs  timer.rs  web.rs
crates/blip_assets/: Cargo.toml
crates/blip_assets/src/: bouncer.rs  canaris.rs  galactic_defender.rs  image.rs  lib.rs  rally.rs  rivet.rs  serpent.rs  wav.rs
crates/bouncer/: Cargo.toml  build.rs
crates/bouncer/src/: main.rs
crates/canaris/: Cargo.toml  PLAN.md  build.rs
crates/canaris/src/: boarding.rs  combat.rs  main.rs  port.rs  screens.rs  sea.rs  state.rs
crates/galactic_defender/: Cargo.toml  build.rs
crates/galactic_defender/src/: main.rs
crates/rally/: Cargo.toml  build.rs
crates/rally/src/: main.rs
crates/rivet/: Cargo.toml  build.rs
crates/rivet/src/: main.rs
crates/serpent/: Cargo.toml  build.rs
crates/serpent/src/: main.rs
docs/: blip.md
games/bouncer/: CMakeLists.txt  main.c
games/bouncer/assets/: generate_assets.c
games/galactic_defender/: CMakeLists.txt  main.c
games/galactic_defender/assets/: generate_assets.c
games/rally/: CMakeLists.txt  main.c
games/rally/assets/: gen_assets  generate_assets.c
games/serpent/: CMakeLists.txt  main.c
games/serpent/assets/: generate_assets.c
lib/: CMakeLists.txt  blip.c  blip.h
plans/: hiscore-e2e-tests.md
sql/: hi_score.sql  scores.sql
test/: fill-canvas.test.mjs
test/e2e/: hiscore.spec.ts
test/e2e/fixtures/: supabase.ts
web/: about.html  audio-unlock.js  blip_bridge.js  docs.js  history.html  howler_audio_plugin.js  index.html  kiosk.css  kiosk.js  manifest.json  shell.css  shell.html  shell.js  sw.js
web/bouncer/: index.data  index.html  index.js  index.wasm
web/canaris/: index.html
web/galactic_defender/: index.data  index.html  index.js  index.wasm
web/rally/: index.data  index.html  index.js  index.wasm
web/rivet/: index.wasm
web/serpent/: index.data  index.html  index.js  index.wasm
