[workspace]
resolver = "2"
members = [
    "crates/blip",
    "crates/blip_assets",
    "crates/serpent",
    "crates/bouncer",
    "crates/galactic_defender",
    "crates/rally",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
macroquad = { version = "0.4", features = ["audio"] }
png = "0.17"
blip = { path = "crates/blip" }
blip_assets = { path = "crates/blip_assets" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
